fix: fix img type

--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -687,7 +687,7 @@ To validate that traffic is flowing to your private subgraphs, you can leverage 
 <img
   className="screenshot"
   alt="AWS VPC Lattice service"
-  src="../../../img/cloud-dedicated/vpc-lattice-service.jpg"
+  src="../../../img/cloud-dedicated/vpc-lattice-service.png"
 />
 
 4. Click on the **Monitoring** tab.
@@ -697,13 +697,13 @@ From there, you can configure and enable access logs for your AWS VPC Lattice se
 <img
   className="screenshot"
   alt="AWS VPC Lattice access logs"
-  src="../../../img/cloud-dedicated/vpc-lattice-access-logs.jpg"
+  src="../../../img/cloud-dedicated/vpc-lattice-access-logs.png"
 />
 
 <img
   className="screenshot"
   alt="AWS VPC Lattice metrics"
-  src="../../../img/cloud-dedicated/vpc-lattice-metrics.jpg"
+  src="../../../img/cloud-dedicated/vpc-lattice-metrics.png"
 />
 
 You can also leverage [Amazon CloudWatch metrics emitted by AWS VPC Lattice](https://docs.aws.amazon.com/vpc-lattice/latest/ug/monitoring-cloudwatch.html) to set up dashboards and alarms to understand the health of your private subgraphs.
@@ -729,7 +729,7 @@ You can validate that your Lattice services are configured to receive traffic on
 <img
   className="screenshot"
   alt="AWS VPC Lattice service"
-  src="../../../img/cloud-dedicated/vpc-lattice-service.jpg"
+  src="../../../img/cloud-dedicated/vpc-lattice-service.png"
 />
 
 4. Click on the **Routing** tab.
@@ -737,7 +737,7 @@ You can validate that your Lattice services are configured to receive traffic on
 <img
   className="screenshot"
   alt="AWS VPC Lattice routing"
-  src="../../../img/cloud-dedicated/vpc-lattice-routing.jpg"
+  src="../../../img/cloud-dedicated/vpc-lattice-routing.png"
 />
 
 5. Validate that you have a listener with a protocol:port configuration of **HTTPS:443**.
@@ -770,7 +770,7 @@ You can validate that your Lattice services are configured to allow traffic from
 <img
   className="screenshot"
   alt="AWS VPC Lattice service"
-  src="../../../img/cloud-dedicated/vpc-lattice-service.jpg"
+  src="../../../img/cloud-dedicated/vpc-lattice-service.png"
 />
 
 4. Click on the **Access** tab.
