--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -47,7 +47,7 @@ The GraphOS reporting endpoint accepts batches of traces and statistics that are
 
 The schema for this protocol buffer is defined as the `Report` message in [the protobuf schema](https://usage-reporting.api.apollographql.com/proto/reports.proto).
 
-> This document describes how to create a report whose `tracesPerQuery` objects consist solely of a list of detailed execution traces in the `trace` array. GraphOS now allows your server to describe usage as a mix of detailed execution traces and pre-aggregated statistics (released in Apollo Server 2.24), which leads to much more efficient reports. This document does not yet describe how to generate these statistics. It also does not describe how to support the "referencing operations" feature of [the Fields page](./field-usage/). We strongly encourage developers to contact Apollo support at **support@apollographql.com** to discuss their use case prior to building their own reporting agent using this module.
+> This document describes how to create a report whose `tracesPerQuery` objects consist solely of a list of detailed execution traces in the `trace` array. GraphOS now allows your server to describe usage as a mix of detailed execution traces and pre-aggregated statistics (released in Apollo Server 2.24), which leads to much more efficient reports. This document does not yet describe how to generate these statistics. It also does not describe how to support the "referencing operations" feature of [the Insights page](./field-usage/). We strongly encourage developers to contact Apollo support at **support@apollographql.com** to discuss their use case prior to building their own reporting agent using this module.
 
 As a starting point, we recommend implementing an extension to the GraphQL execution that creates a report with a single trace, as defined in the `Trace` message of [the protobuf schema](https://usage-reporting.api.apollographql.com/proto/reports.proto). Then, you can batch multiple traces into a single report. We recommend sending batches approximately every 20 seconds, and limiting each batch to a reasonable size (~4MB).
 
@@ -131,7 +131,7 @@ For example, you can restrict which information is sent to GraphOS, particularly
 
 ## Reporting field usage
 
-Your GraphQL server can report metrics for field executions, requesting operations, or both.
+Your GraphQL server can report metrics for requests, (field) executions or both.
 
 ### Prerequisites
 
@@ -139,19 +139,19 @@ Your GraphQL server can report metrics for field executions, requesting operatio
 
 To report each type of field usage metric to GraphOS, make sure your graph meets the prerequisites for that metric:
 
-#### Requesting operations
+#### Requests
 
-To report metrics for requesting operations, your GraphQL server must run Apollo Server 3.6 or later.
+To report metrics for requests, your GraphQL server must run Apollo Server 3.6 or later.
 
 If you have a [federated graph](/federation), your _gateway_ must run Apollo Server 3.6 or later, but there are no requirements for your subgraphs.
 
 #### Field executions
 
-To report metrics for field executions, your GraphQL server can run any recent version of Apollo Server 2.x or 3.x.
+To report metrics for (field) executions, your GraphQL server can run any recent version of Apollo Server 2.x or 3.x.
 
 If you have a [federated graph](https://apollographql.com/docs/federation), your subgraphs must support federated tracing. For compatible libraries, see the `FEDERATED TRACING` entry for libraries in [this table](/federation/building-supergraphs/supported-subgraphs/).
 
-> If _some_ of your subgraphs support federated tracing and others _don't_, only field executions in compatible subgraphs are reported to Apollo.
+> If _some_ of your subgraphs support federated tracing and others _don't_, only executions in compatible subgraphs are reported to Apollo.
 
 ### Reporting with a supergraph
 
@@ -167,11 +167,11 @@ In Apollo Server 3.6 and later, you can disable field-level instrumentation for 
 
 Disabling field-level instrumentation for a particular request has the following effects:
 
-- The request does not contribute to the "field executions" statistic on the Fields page in Studio.
+- The request does not contribute to the "executions" statistic on the Insights page in Studio.
 - The request does not contribute to field-level execution timing hints that can be displayed in the Explorer and in VS Code.
 - The request does not produce a trace that can be viewed in the Traces section of the Operations page in Studio.
 
-These requests _do_ still contribute to most features of Studio, such as schema checks, the Operations page, and the "requesting operations" statistic on the Fields page.
+These requests _do_ still contribute to most features of Studio, such as schema checks, the Operations page, and the "requests" statistic on the Insights page.
 
 To disable field-level instrumentation for _all_ requests, pass `() => false` as the `fieldLevelInstrumentation` option:
 
@@ -186,7 +186,7 @@ new ApolloServer({
 });
 ```
 
-If you do this, field execution statistics do not appear on the Fields page.
+If you do this, field execution statistics do not appear on the Insights page.
 
 #### Fractional sampling
 
@@ -207,9 +207,9 @@ If you do so, Apollo Server randomly chooses to enable field-level instrumentati
 
 > ⚠️ Make sure to pass a _number_ (like `0.01`), _not_ a function that always _returns_ the same number (like `() => 0.01`), which has a [different effect](#custom-sampling).
 
-In this case, whenever field-level instrumentation _is_ enabled for a particular request, Apollo Server reports it to Studio with a weight based on the given probability. The "field executions" statistic on the Fields page (along with execution timing hints) is scaled by this weight.
+In this case, whenever field-level instrumentation _is_ enabled for a particular request, Apollo Server reports it to Studio with a weight based on the given probability. The "executions" statistic on the Insights page (along with execution timing hints) is scaled by this weight.
 
-For example, if you pass `0.01`, your server enables field-level execution for approximately 1% of requests, and every observed field execution is counted as 100 field executions on the Fields page. (The actual observed execution count is available in a tooltip in the table.)
+For example, if you pass `0.01`, your server enables field-level execution for approximately 1% of requests, and every observed field execution is counted as 100 executions on the Insights page. (The actual observed execution count is available in a tooltip in the table.)
 
 #### Custom sampling
 
