--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -3,7 +3,7 @@ title: Operation metrics in GraphOS
 description: Understand your operation performance
 ---
 
-Once you've configured your graph to send [operation metrics to GraphOS](./sending-operation-metrics/), you can analyze them in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) from any variant's **Insights** page:
+Once you've configured your graph to send [operation metrics to GraphOS](./sending-operation-metrics/), you can view them in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) from any variant's **Insights** page:
 
 <img
   src="../img/insights-quickstart.jpg"
@@ -11,23 +11,24 @@ Once you've configured your graph to send [operation metrics to GraphOS](./sendi
   alt="The Insights page in GraphOS Studio"
 />
 
-This page combines operation and field metrics and is broken into two main sections:
+This page combines operation and field metrics and has two main sections:
 
-- The collapsible left sidebar, where you can [search, filter, and sort operations](#operation-metrics) and fields. Refer to [Field usage](./fields-usage) for more information on field metrics.
-- The main insights view, which displays an [**Operations Overview**](#operations-overview) and overall [request metrics](#request-metrics), like the [**Request Rate**](#request-rate).
+- The collapsible left sidebar, where you can [search, filter, and sort operations](#operation-metrics) and fields (refer to [Field usage](./fields-usage) for more information on field metrics)
+- The main insights view, which displays an [**Operations Overview**](#operations-overview) and overall [request metrics](#request-metrics), like the [request rate](#request-rate)
 
-  - When you click an operation name from the left sidebar or the overview, this view refines to show [detailed information](#operation-details) about the individual operation.
-  - You can always return to the overall view by clicking **← Back to All Operations** in the upper right.
+When you click an operation name from the left sidebar or overview, this view shows [detailed information](#operation-details) about the individual operation.
 
-  <img
-    src="../img/operation-signature.jpg"
-    className="screenshot"
-    alt="The Insights page in GraphOS Studio"
-  />
+<img
+  src="../img/operation-signature.jpg"
+  className="screenshot"
+  alt="The Insights page in GraphOS Studio"
+/>
+
+You can always return to the overall view by clicking **← Back to All Operations** in the upper right.
 
 ## Operations overview
 
-The **Operations Overview** is top and center on the **Insights** page because it summarizes your supergraph's recent usage and performance. It includes the median, range, and percentage change for:
+The **Operations Overview** is top and center because it summarizes your supergraph's recent usage and performance. It includes the median, range, and percentage change for:
 
 - The **rate of requests** sent to your router
 - Your supergraph's **p95 service time**
@@ -35,9 +36,9 @@ The **Operations Overview** is top and center on the **Insights** page because i
 
 Beneath each of those metrics, you can also see the individual operations with:
 
-- the highest request rates
-- the slowest p95 service time
-- the highest error percentage
+- The highest request rates
+- The slowest p95 service time
+- The highest error percentage
 
 <img
   src="../img/operations-overview.jpg"
@@ -45,9 +46,9 @@ Beneath each of those metrics, you can also see the individual operations with:
   alt="Operations Overview in GraphOS Studio"
 />
 
-> The blue **M** icon (Ⓜ️) next to an operation name indicates its a mutation.
+> The blue **M** icon (Ⓜ️) next to an operation name indicates it's a mutation.
 
-You can click an operation name to view more [detailed information](#operation-details) for it. You can also filter the overview by timeframe and client in the top right corner.
+You can adjust the overview's timeframe and filter by client in the top right corner.
 
 <img
   src="../img/operations-overview-filters.jpg"
@@ -55,7 +56,7 @@ You can click an operation name to view more [detailed information](#operation-d
   alt="Operations Overview in GraphOS Studio"
 />
 
-More overall [request metrics](#request-metrics) are directly below the overview.
+You can click an operation name to view more [detailed information](#operation-details) about it or scroll down to see more overall [request metrics](#request-metrics).
 
 ## Operation metrics
 
@@ -92,18 +93,13 @@ Specifically, you can:
   width="300"
 />
 
-As with the **Operations Overview**, you can click an operation in the sidebar to dive into its details.
+As with the operations overview, you can click an operation name to view more detailed information.
 
 ### Operation details
 
-When you click an operation name, you open detailed information for that operation in the main insights view. This information includes the operation's:
+When you click an operation name, you open detailed information for that operation in the main insights view. This information includes the operation's [**operation signature**](./operation-signatures) and [**query plan**](/federation/query-plans/) as a chart or text.
 
-- [**Operation signature**](./operation-signatures)—from this view, you can also:
-  - Save the operation to a collection by clicking the save button in the top right corner of the signature.
-  - Run the query in Explorer by clicking the play button in the top right corner of the signature.
-- [**Query plan**](/federation/query-plans/) as a chart or text—from this view, you can also open the query plan on a separate page to examine it more closely.
-
-To the right of the operation signature and query plan, you can view the operations **usage** and **error** metrics or [**traces**](#resolver-level-traces) by toggling the labels above the operation signature or query plan.
+To the right of the operation signature and query plan, you can view the operations **usage**, **error** metrics, or [**traces**](#resolver-level-traces) by toggling the labels above the operation signature or query plan.
 
 <img
   src="../img/operation-signature.jpg"
@@ -113,7 +109,7 @@ To the right of the operation signature and query plan, you can view the operati
 
 ### Resolver-level traces
 
-If you [enable trace reporting](#enabling-traces) in your subgraphs, GraphOS Studio can also display resolver-level trace information about each operation:
+If you [enable trace reporting](#enabling-traces) in your subgraphs, GraphOS Studio can also display resolver-level trace information about each operation.
 
 <img
   src="../img/traces-tab.jpg"
@@ -122,7 +118,7 @@ If you [enable trace reporting](#enabling-traces) in your subgraphs, GraphOS Stu
   width="600"
 />
 
-As shown above, the **Traces** tab for an operation provides a breakdown of timing and error information for _each field_ that's resolved as part of that operation. This helps you identify opportunities to improve your supergraph's overall performance by optimizing whichever resolvers currently act as a bottleneck.
+The **Traces** tab for an operation provides a breakdown of timing and error information for _each field_ resolved as part of that operation. This helps you identify opportunities to improve your supergraph's overall performance by optimizing whichever resolvers currently act as a bottleneck.
 
 #### Enabling traces
 
