feat(graphos): explanation on launch status monitoring

--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -664,7 +664,7 @@ include_subgraph_errors:
   src="../../../img/cloud-dedicated/router-yaml-subgraph-errors.png"
 />
 
-This will trigger a new launch. Please wait for a few minutes for your Cloud Router to update with this new configuration.
+This will trigger a new launch. Please wait for a few minutes for your Cloud Router to update with this new configuration. You can monitor the deployment status in the Launches page for your graph variant.
 
 Once you have identified and resolved the underlying issue, we recommend you to disable subgraph errors by removing the block that sets `include_subgraph_errors` and saving the Router configuration YAML again.
 
