Update table of pages in cloud quickstart

--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -194,19 +194,18 @@ We'll cover some of these pages in later steps, but feel free to click around an
 
 <ExpansionPanel title="Click to expand">
 
-| Page           | Description                                                                                                                                                                                                                |
-| -------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **README**     | Displays the variant's editable Markdown-formatted README, along with other important details about the variant (such as its graph ref and router URL). [Learn more](../graphs/studio-features/#the-readme-page)           |
-| **Schema**     | Documentation for all your supergraph's types and fields. Supports filtering definitions by name, subgraph, and other values. [Learn more](../graphs/studio-features/#the-schema-page)                                     |
-| **Explorer**   | A powerful IDE for building and executing operations against your supergraph. [Learn more](../explorer/)                                                                                                                   |
-| **Subgraphs**  | Displays the details for each separate GraphQL API that's part of your supergraph. (Each API is called a **subgraph**.) [Learn more](../routing/cloud/)                                                                    |
-| **Changelog**  | Displays a historical diff of additions, modifications, and deletions made to your supergraph's schema.                                                                                                                    |
-| **Fields**     | Displays field-level metrics for your supergraph, indicating how frequently each field is included in client operations. [Learn more](../metrics/field-usage)                                                              |
-| **Clients**    | Displays operation metrics for the variant, broken down by individual clients. This feature requires that clients identify themselves in their requests to your router. [Learn more](../metrics/client-awareness)          |
-| **Operations** | Displays an overview of usage metrics for the variant, including request and error rates. Supports filtering by date range. [Learn more](../metrics/)                                                                      |
-| **Checks**     | Displays the results of schema checks that have been run for the variant. [Learn more](../delivery/schema-checks)                                                                                                          |
-| **Launches**   | Displays the results of recent launches executed for your supergraph. A launch occurs whenever changes are made to one of your subgraph schemas, resulting in an update to your router. [Learn more](../delivery/launches) |
-| **Settings**   | Configuration options for the individual variant, along with high-level options for the entire supergraph.                                                                                                                 |
+| Page          | Description                                                                                                                                                                                                                |
+| ------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **README**    | Displays the variant's editable Markdown-formatted README, along with other important details about the variant (such as its graph ref and router URL). [Learn more](../graphs/studio-features/#the-readme-page)           |
+| **Schema**    | Documentation for all your supergraph's types and fields. Supports filtering definitions by name, subgraph, and other values. [Learn more](../graphs/studio-features/#the-schema-page)                                     |
+| **Explorer**  | A powerful IDE for building and executing operations against your supergraph. [Learn more](../explorer/)                                                                                                                   |
+| **Changelog** | Displays a historical diff of additions, modifications, and deletions made to your supergraph's schema.                                                                                                                    |
+| **Subgraphs** | Displays the details for each separate GraphQL API that's part of your supergraph. (Each API is called a **subgraph**.) [Learn more](../routing/cloud/)                                                                    |
+| **Clients**   | Displays operation metrics for the variant, broken down by individual clients. This feature requires that clients identify themselves in their requests to your router. [Learn more](../metrics/client-awareness)          |
+| **Insights**  | Displays usage and performance metrics for the variant at the operation and field levels. This includes request and error rates. [Learn more](../metrics/)                                                                 |
+| **Checks**    | Displays the results of schema checks that have been run for the variant. [Learn more](../delivery/schema-checks)                                                                                                          |
+| **Launches**  | Displays the results of recent launches executed for your supergraph. A launch occurs whenever changes are made to one of your subgraph schemas, resulting in an update to your router. [Learn more](../delivery/launches) |
+| **Settings**  | Configuration options for the individual variant, along with high-level options for the entire supergraph.                                                                                                                 |
 
 </ExpansionPanel>
 
