--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -72,10 +72,11 @@ Each row in the the **Clients & Operations** table shows a client that requested
 
 Each row in the **Clients & Operations** table displays some combination of the following metrics for each field, depending on which data you report to GraphOS:
 
-| Metric                 | Description                                                                                                                |
-| ---------------------- | -------------------------------------------------------------------------------------------------------------------------- |
-| Requests     | How many operations sent by clients over a given time period have included the field, according to metrics provided by your servers |
-| Executions   | How many times your servers have executed the resolver for the field over a given time period                                       |
+| Metric              | Description                                                                                                                         |
+| ------------------- | ----------------------------------------------------------------------------------------------------------------------------------- |
+| Client versions     | How many different client versions have sent the operation                                                                          |
+| Requests            | How many operations sent by clients over a given time period have included the field, according to metrics provided by your servers |
+| Executions          | How many times your servers have executed the resolver for the field over a given time period                                       |
 
 For each of these columns to appear on the Insights page, your GraphQL servers must [report the associated metrics to GraphOS](./sending-operation-metrics#reporting-field-usage). If some but not _all_ of your GraphQL servers report this data, the Insights page presents an incomplete picture of your graph's field usage.
 
@@ -88,7 +89,7 @@ Let's look at these two metrics for an example field:
   width="700"
 />
 
-As you can see, the **requests** and **executions** for a single field can differ significantly! There are many possible reasons for this, described below.
+As you can see, the **requests** and **executions** for a field can differ significantly! There are many possible reasons for this, described below.
 
 #### Objects in lists
 
