--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -1,13 +1,11 @@
 ---
 title: Setting up a self-hosted supergraph
-description: Host your enterprise router in your own infrastructure
+description: Host your supergraph in your own infrastructure
 ---
 
-> **Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
->
+> The Apollo Router provides expanded performance, security, and customization features for organizations with a [GraphOS Enterprise plan](/graphos/enterprise/).
+> 
 > If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
-
-This tutorial gets you up and running with GraphOS and a self-hosted supergraph. If your organization _doesn't_ currently have an Enterprise plan and you want to test out this functionality, **[sign up for a free Enterprise trial.](../org/plans/#enterprise-trials)**
 
 > **Important:** This tutorial uses [Docker](https://www.docker.com/) for containerization of your supergraph's router.
 
