--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -3,7 +3,7 @@ title: Setting up a self-hosted supergraph
 description: Host your supergraph in your own infrastructure
 ---
 
-> The Apollo Router provides expanded performance, security, and customization features for organizations with a [GraphOS Enterprise plan](/graphos/enterprise/).
+> Connecting a self-hosted Apollo Router to GraphOS requires an Enterprise plan. Organizations with an Enterprise plan also have access to expanded performance, security, and customization features in the router.
 > 
 > If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 
