--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -3,9 +3,8 @@ title: Setting up a self-hosted supergraph
 description: Host your supergraph in your own infrastructure
 ---
 
-> Connecting a self-hosted Apollo Router to GraphOS requires an Enterprise plan. Organizations with an Enterprise plan also have access to expanded performance, security, and customization features in the router.
-> 
-> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+This tutorial gets you up and running with GraphOS and a self-hosted supergraph, using the Apollo Router. While you can run the router regardless of your Apollo plan, connecting the router to GraphOS requires an [Enterprise plan](https://new.apollographql.com/pricing).
+If your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 
 > **Important:** This tutorial uses [Docker](https://www.docker.com/) for containerization of your supergraph's router.
 
